[package]
name = "orirocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
thiserror = "1.0.38"
clap = "4.1.4"
log = "0.4.17"
simplelog = "0.12.0"

orirocks-api-v3 = { path = "../orirocks-api-v3" }
orirocks-qemu = { path = "../orirocks-qemu", optional = true }

[features]
default = ["plugin-qemu"]
plugin-qemu = ["orirocks-qemu"]